<resources>
    <string name="app_name" translatable="false">Create_Account</string>
    <string name="welcome_back" translatable="false"> Welcome Back </string>
    <string name="sign_name_massage" translatable="false">sign in to access your account</string>
    <string name="email_hint" translatable="false">Enter your Email</string>
    <string name="password_hint" translatable="false">Password</string>
    <string name="remember_me" translatable="false">Remember Me</string>
    <string name="forgot_password" translatable="false">Forgot Password?</string>
    <string name="next" translatable="false">Next</string>
    <string name="forget_password" translatable="false">Forget Password? </string>
    <string name="full_name" translatable="false">Full Name</string>
    <string name="valid_email" translatable="false">Valid email</string>
    <string name="phone_number" translatable="false">Phone Number</string>
    <string name="get_started" translatable="false">Get Started</string>
    <string name="by_creating_a_free_account" translatable="false">by creating a free account</string>
    <string name="strong_password" translatable="false">Strong Password</string>
    <string name="By_checking_the_box_you_agree_to_our_Terms_and_Conditions" translatable="false">By checking the box you agree to our Terms and Conditions.</string>
    <string name="new_member" translatable="false">New member?</string>
    <string name="register_now" translatable="false">Register now</string>
    <string name="already_member">Already a member? <font color="#6C63FF">Log In</font></string>

</resources>